Avoid downloading unsupported `<source>` types in HTMLPreloadScanner

The preloadScanner was picking non-matching sources as it was ignoring the `type` attribute.
That resulted in unnecessary download. This CL fixes that.

BUG=615473

Review-Url: https://codereview.chromium.org/2018353002
Cr-Commit-Position: refs/heads/master@{#396742}

Former-commit-id: 56bef09698c3f96a3b8a0f776f4d964bb49bb2a3